# mate-session-manager

./: .build.yml  .gitmodules  .travis.yml  AUTHORS  CNAME  ChangeLog  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  makepot  mate-session-manager.pot
.tx/: config  config_20221028215427.bak
2021-04-22-223726-5409-1@86662ca4477c_gsm-properties-dialog/: index.html  report-0d9bf1.html  report-2fa81e.html  report-326d32.html  report-3e6796.html  report-51631d.html  report-51a663.html  report-54fb93.html  report-56940e.html  report-5dc14f.html  report-6a258b.html  report-6e3049.html  report-6f3262.html  report-772f84.html  report-784469.html  report-788f9a.html  report-7dd849.html  report-8459e7.html  report-88dd5f.html  report-8d6443.html  report-949b91.html  report-94c19f.html  report-9ec567.html  report-ae56f8.html  report-af44e9.html  report-ba7da0.html  report-dff12c.html  report-e056e7.html  report-e8aaef.html  report-eda0c2.html  report-f7c64f.html  report-f9146a.html
2021-04-22-223835-4394-cppcheck@86662ca4477c_gsm-properties-dialog/: 0.html  10.html  11.html  19.html  2.html  23.html  8.html  index.html
2021-04-22-224523-5414-1@ab29465b8ac9_gsm-properties-dialog/: index.html  report-084955.html  report-0c4967.html  report-306db8.html  report-3340bc.html  report-3baa2b.html  report-4195db.html  report-42cc54.html  report-51a341.html  report-57169c.html  report-5717ef.html  report-5afb05.html  report-6703ec.html  report-6a908a.html  report-6aeb83.html  report-79eb9b.html  report-7bc8de.html  report-7d56e9.html  report-802bfc.html  report-81084e.html  report-818a99.html  report-a0d913.html  report-a86e1c.html  report-aaeffe.html  report-be384d.html  report-c15e1c.html  report-cbbc03.html  report-db1c70.html  report-de3c2e.html  report-ee828e.html  report-f5dc17.html  report-fd1c2d.html
2021-04-22-224631-2009-cppcheck@ab29465b8ac9_gsm-properties-dialog/: 0.html  1.html  15.html  3.html  6.html
2021-04-23-084431-5417-1@4814712867bf_gsm-properties-dialog/: index.html  report-0c06d2.html  report-1db24e.html  report-21c92c.html  report-36bfb1.html  report-41c097.html  report-4e19b6.html  report-5198fe.html  report-58f2a3.html  report-595d53.html  report-5b8a60.html  report-6ba9ba.html  report-6d31a8.html  report-75f3a3.html  report-8b0d47.html  report-8bf69c.html  report-8d7230.html  report-8e47ab.html  report-94b2d2.html  report-a2a268.html  report-a82535.html  report-aab3f9.html  report-b0ad5a.html  report-bc985b.html  report-bf7bd2.html  report-c2710b.html  report-c65423.html  report-dbe615.html  report-dfcfb6.html  report-ed689c.html  report-ef3931.html  report-f0c8b3.html
2021-04-23-084543-9346-cppcheck@4814712867bf_gsm-properties-dialog/: 1.html  13.html  17.html  22.html  24.html  index.html  stats.html
2021-04-25-084853-5413-1@fa58f29c3437_gsm-properties-dialog/: index.html  report-12e3e3.html  report-1682ab.html  report-1ab270.html  report-1b647e.html  report-20c216.html  report-2967d8.html  report-2b2570.html  report-3c4f9f.html  report-4efc0a.html  report-4f33dc.html  report-610be2.html  report-64275f.html  report-79cd8b.html  report-7f5f6e.html  report-91db22.html  report-9fc806.html  report-a03c88.html  report-a060ca.html  report-ae00ae.html  report-b95b5b.html  report-bcfaf9.html  report-bf2bd6.html  report-c019d9.html  report-c4eedb.html  report-c6e3ba.html  report-d21240.html  report-d469b7.html  report-e1720d.html  report-eeb93a.html  report-f3dd13.html  report-fb8792.html
2021-04-25-085000-6023-cppcheck@fa58f29c3437_gsm-properties-dialog/: 12.html  16.html  7.html
2021-04-25-090033-5420-1@b5b44156225e_gsm-properties-dialog/: index.html  report-24f21e.html  report-253e8b.html  report-29a2b5.html  report-2f3355.html  report-32fec3.html  report-382df6.html  report-430963.html  report-48dfdd.html  report-498d98.html  report-51460d.html  report-531fe8.html  report-6774ef.html  report-68a0a8.html  report-6945b1.html  report-6a6b52.html  report-6be60c.html  report-6eea5a.html  report-6f1a4c.html  report-724a43.html  report-73d311.html  report-965327.html  report-9d740d.html  report-9eb49c.html  report-ad4f5f.html  report-c9e0fe.html  report-d260f5.html  report-d39f09.html  report-e02593.html  report-e1a73e.html  report-ea1152.html  report-f846c4.html
2021-04-25-090143-2816-cppcheck@b5b44156225e_gsm-properties-dialog/: 1.html  18.html  5.html
2021-04-25-090859-5416-1@1d985a27148d_gsm-properties-dialog/: index.html  report-0ee07b.html  report-0f89e5.html  report-1a6eea.html  report-2c6cb8.html  report-3f0106.html  report-44f216.html  report-4af7c4.html  report-55bb5f.html  report-594dfb.html  (+22 more)
capplet/: Makefile.am  gsm-app-dialog.c  gsm-app-dialog.h  gsm-properties-dialog.c  gsm-properties-dialog.h  gsp-app-manager.c  gsp-app-manager.h  gsp-app.c  gsp-app.h  gsp-keyfile.c  gsp-keyfile.h  main.c  msm-desktop-app-dialog.c  msm-desktop-app-dialog.h
data/: Makefile.am  gsm-app-dialog.ui  gsm-inhibit-dialog.ui  gsm-properties-dialog.ui  mate-session-properties-resources.gresource.xml  mate-session-properties.desktop.in  mate-session-properties.desktop.in.in  mate-session.convert  mate-session.schemas.in.in  mate-wm  mate-wm.desktop.in  mate-wm.desktop.in.in  mate.desktop.in  org.mate.session.gschema.xml.in  org.mate.session.gschema.xml.in.in  session-properties.ui
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
doc/dbus/: Makefile.am  mate-session.xml.in
doc/man/: Makefile.am  mate-session-inhibit.xml  mate-session-properties.1  mate-session-save.1  mate-session.1  mate-wm.1
splash/: Makefile.am  Makefile.in  README  mate-session-splash.c  mate-session-splash.desktop.in.in.in  splash-window.c  splash-window.h
tools/: Makefile.am  mate-session-check-accelerated-common.h  mate-session-check-accelerated-gl-helper.c  mate-session-check-accelerated-gles-helper.c  mate-session-check-accelerated.c  mate-session-inhibit.c  mate-session-save.c
(+924 files in other folders)
